Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10509

ep-engine mangles last entry in failover log on unclean shutdown even when everything is safely on disk

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Unknown
    • June 30 - July 18

    Description

      This is what I get after saving a number of docs into vbucket other and successfully waiting for them to hit disk.

      Before shutdown:

      root@beta:~/src/altoros/moxi/repo30# rlwrap ../send-diag-eval lh:9000
      xdcr_upr_streamer:get_failover_log("other", 7).
      RestClient.post "lh:9000/diag/eval", "xdcr_upr_streamer:get_failover_log(\"other\", 7).\n", "Accept"=>"/; q=0.5, application/xml", "Accept-Encoding"=>"gzip, deflate", "Content-Length"=>"48"

      1. => 200 OK | 76 bytes:[ {13226830787664969728,0},{2722187756529715712,48},{4817340327337429639,96}]


        [{13226830787664969728,0}

        ,

        {2722187756529715712,48},{4817340327337429639,96}]


        After Ctrl-C (unclean shutdown) and restart:

        root@beta:~/src/altoros/moxi/repo30# rlwrap ../send-diag-eval lh:9000
        xdcr_upr_streamer:get_failover_log("other", 7).
        RestClient.post "lh:9000/diag/eval", "xdcr_upr_streamer:get_failover_log(\"other\", 7).\n", "Accept"=>"/; q=0.5, application/xml", "Accept-Encoding"=>"gzip, deflate", "Content-Length"=>"48"
        # => 200 OK | 76 bytes:[{13226830787664969728,0},{2722187756529715712,48}

        ,

        {4817340327337430016,96}]


        [{13226830787664969728,0},{2722187756529715712,48},{4817340327337430016,96}

        ]

      Note how last entry uuid is changed.

      Currently that's causing my xdcr work in progress checkpointing to fail to resume from xdcr checkpoint without good reason.

      Attachments

        For Gerrit Dashboard: MB-10509
        # Subject Branch Project Status CR V

        Activity

          People

            venu Venu Uppalapati (Inactive)
            alkondratenko Aleksey Kondratenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty