MB-10509: Handling vbucket uuids

- JSON does not accomodate for 64 bit values,
a max of 53 bits.
- As in the failover table, the generated uuid
is 64 bits, and this is later converted to JSON
before saving to couchstore, the last few bits
tend to get garbled.
- Bring the 64 bit value of the uuid down to
48 bits should address this issue.

Change-Id: I3c22f3fc31221b67dc70b6c7538becb89556b2ea
Reviewed-on: http://review.couchbase.org/34971
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>